tests/style/bug_191_constructor_naming/expected_out.txt
=== PLAIN MODE ===
In Kitten.m, line 19
|         function obj = Kitten(x)
|                        ^^^^^^ error: class can only have one constructor, previous declaration in line 11
In Kitten.m, line 19
|         function obj = Kitten(x)
|                        ^^^^^^ style: violates naming scheme for method [naming_functions]
MISS_HIT Style Summary: 2 file(s) analysed, 1 style issue(s), 1 error(s)

=== HTML MODE ===
MISS_HIT Style Summary: 2 file(s) analysed, 1 style issue(s), 1 error(s)
